# monkelang

./: justfile  monkelang.cabal
app/: Main.hs
src/: Lexer.hs  Token.hs
test/: Spec.hs
