cabal-version: 3.0
-- For further documentation, see:
-- http://haskell.org/cabal/users-guide/
name: monkelang
version: 1.0.0
license: AGPL-3.0-only
license-file: LICENSE
build-type: Simple

common warnings
    ghc-options: -Wall -Wno-missing-signatures

library
    -- Import common warning flags.
    import: warnings
    exposed-modules: Lexer, Token, Parser, Evaluator
    other-extensions: NamedFieldPuns
    build-depends: base ^>=4.18.0.0
    hs-source-dirs: src
    default-language: GHC2021

executable monkelang
    import: warnings
    main-is: Main.hs
    other-extensions: NamedFieldPuns
    build-depends:
        base ^>=4.18.0.0,
        monkelang
    hs-source-dirs: app
    default-language: GHC2021

test-suite monkeylang-tests
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base,
        hspec,
        hspec-contrib,
        monkelang
    hs-source-dirs: test
    default-language: GHC2021